# cpp-snake

./: CMakeLists.txt  README.md
src/: apple.cpp  apple.h  direction.cpp  direction.h  drawable.cpp  drawable.h  game.cpp  game.h  main.cpp  point.h  snake.cpp  snake.h  utils.cpp  utils.h
